adjust mobile styling and added a fix I think will solve the dropdown selection on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -66,12 +66,6 @@ p {
   width: 70%;
 }
 
-/* @media screen and (min-width: 840px) {
-  .hide-on-med-and-up {
-    display: none;
-  }
-} */
-
 @media screen and (max-width: 840px) {
   nav .brand-logo {
     max-width: 800px;
@@ -89,13 +83,9 @@ p {
     padding: 60px 0;
   }
 
-  /* .hide-on-med-and-up {
-    display: flex;
-    position: relative;
+  .dropdown-content {
+    transform: none;
   }
-  .hide-on-mobile {
-    display: none;
-  } */
 }
 
 @media screen and (max-width: 668px) {
@@ -137,6 +127,6 @@ p {
   }
 
   .dropdown-content li > span {
-    padding: 40px 0;
+    padding: 30px 0;
   }
 }
